# GreenBasket

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp
class-diagram/: diagram.qmodel
importedcontent/: README.md
qml/screens/: Sale.qml
src/: main.cpp
src/domain/: account.h  billitem.cpp  billitem.h  inventoryitem.cpp  inventoryitem.h  product.cpp  product.h  productcategory.cpp  productcategory.h  productgroup.cpp  productgroup.h  productlist.cpp  productlist.h  sectioninfo.cpp  sectioninfo.h  soldproduct.cpp  soldproduct.h  stockproduct.cpp  stockproduct.h  submenu.cpp  submenu.h  user.h
src/domain/abstracModel/: productlistmodel.cpp  productlistmodel.h
src/domain/qmltypes/: bill.cpp  bill.h  inventory.cpp  inventory.h  menu.cpp  menu.h  sale.cpp  sale.h  stock.cpp  stock.h  submenu.cpp  submenu.h
src/ui/: Main.qml
src/ui/controls/: ActionButton.qml  ActionButton2.qml  Button2.qml.autosave  Button3.qml.autosave  IconButton.qml  TabButton1.qml  TicketPanel.qml
src/ui/screens/qml/: Sale.qml  Sale.qml.autosave
src/ui/screens/qml_ui/: SaleView.ui.qml
src/ui/shapes/: Tab.qml
